fix: increase article heading spacing
Closes #20

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -129,6 +129,19 @@ h6 {
   letter-spacing: 0.01em;
 }
 
+body.article article h1 {
+  margin-top: 0;
+}
+
+body.article article h2,
+body.article article h3,
+body.article article h4,
+body.article article h5,
+body.article article h6 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
 
 /* ============================================
    BASE STYLES
